manifests/apps/02-development/02-drone/05-deployment.yml
---
# Source: drone/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  namespace: drone
  labels:
    release: drone
    helm.sh/chart: drone-0.6.1
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
    app.kubernetes.io/component: server
    app.kubernetes.io/version: "2.12.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone
      app.kubernetes.io/instance: drone
      app.kubernetes.io/component: server
  strategy:
        {}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone
        app.kubernetes.io/instance: drone
        app.kubernetes.io/component: server
      annotations:
        checksum/secrets: 30d5e3d95ec0f283ad064cbcaad5ab1592fe3979342d2d3a11c128422b31525b
    spec:
      automountServiceAccountToken: false
      serviceAccountName: drone
      securityContext:
        {}
      containers:
        - name: server
          securityContext:
            {}
          image: "drone/drone:2.12.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            {}
          volumeMounts:
            - name: storage-volume
              mountPath: /data
              subPath: ""
      volumes:
        - name: storage-volume
          hostPath:
            path: /mnt/gluster/gluster/development/drone
