manifests/apps/02-development/02-drone/06-deployment.yml
---
# Source: drone/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  labels:
    release: drone
    helm.sh/chart: drone-0.6.0
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
    app.kubernetes.io/component: server
    app.kubernetes.io/version: "2.12.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone
      app.kubernetes.io/instance: drone
      app.kubernetes.io/component: server
  strategy:
    {}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone
        app.kubernetes.io/instance: drone
        app.kubernetes.io/component: server
      annotations:
        checksum/secrets: 7adaf7b470e0c0b761629fe15f8304f79782e0e0ec8ce28f79826bf28dbd8f62
    spec:
      automountServiceAccountToken: false
      serviceAccountName: drone
      securityContext:
        {}
      containers:
        - name: server
          securityContext:
            {}
          image: "drone/drone:2.12.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            {}
          volumeMounts:
            - name: storage-volume
              mountPath: /data
              subPath: ""
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: drone-pvc
