manifests/apps/02-development/02-drone/12-runner-deployment.yml
---
# Source: drone-runner-kube/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner-kube
  labels:
    helm.sh/chart: drone-runner-kube-0.1.10
    app.kubernetes.io/name: drone-runner-kube
    app.kubernetes.io/instance: drone-runner-kube
    app.kubernetes.io/component: drone-runner-kube
    app.kubernetes.io/version: "1.0.0-rc.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone-runner-kube
      app.kubernetes.io/instance: drone-runner-kube
      app.kubernetes.io/component: drone-runner-kube
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone-runner-kube
        app.kubernetes.io/instance: drone-runner-kube
        app.kubernetes.io/component: drone-runner-kube
      annotations:
        checksum/secrets: 734c839faabb4e498f9b252146ca72c7eb7c5ca5d82bb74e34ae7f8e38424306
    spec:
      serviceAccountName: drone-runner-kube
      securityContext:
        {}
      terminationGracePeriodSeconds: 3600
      containers:
        - name: server
          securityContext:
            {}
          image: "drone/drone-runner-kube:1.0.0-rc.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            {}
