manifests/apps/02-development/02-drone/05-service.yml
---
# Source: drone/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: drone
  annotations:
    {}
  labels:
    release: drone
    helm.sh/chart: drone-0.6.1
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
    app.kubernetes.io/component: server
    app.kubernetes.io/version: "2.12.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
    app.kubernetes.io/component: server
